<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TambahSuratMasukFragment">

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Loading, Mohon Tunggu"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_loading"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_tambah_surat_masuk"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/btn_simpan_surat_masuk"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/tv_no_surat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/no_surat"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_no_surat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_no_surat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_no_surat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Isi nomor surat masuk"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:maxLength="30"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_tgl_surat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tgl_surat"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_no_surat" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tgl_surat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_tgl_surat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_tgl_surat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="false"
                    android:inputType="textNoSuggestions"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:hint="Pilih tanggal" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/ll_instansi_pengirim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_tgl_surat">

                <TextView
                    android:id="@+id/tv_instansi_pengirim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/instansi_pengirim"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tambah_instansi_pengirim"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="Tambah"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_instansi_pengirim"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/ll_instansi_pengirim">

                <AutoCompleteTextView
                    android:id="@+id/option_instansi_pengirim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Pilih instansi"
                    android:textColor="@color/black"
                    android:inputType="none"
                    android:maxLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_instansi_pengirim">

                <TextView
                    android:id="@+id/tv_kategori"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Kategori"
                    android:textColor="@color/black"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tambah_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="Tambah"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_kategori"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/ll_kategori">

                <AutoCompleteTextView
                    android:id="@+id/option_kategori"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Pilih kategori surat"
                    android:textColor="@color/black"
                    android:inputType="none"
                    android:maxLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <com.google.android.material.chip.ChipGroup-->
            <!--                android:id="@+id/chip_instansi"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="0.5"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/ll_kategori"/>-->

<!--            <LinearLayout-->
<!--                android:id="@+id/ll_sifat_surat"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:orientation="horizontal"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/til_kategori">-->

<!--                <TextView-->
<!--                    android:id="@+id/tv_sifat_surat"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="@string/sifat_surat"-->
<!--                    android:textColor="@color/black"-->
<!--                    />-->

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    android:id="@+id/btn_tambah_sifat_surat"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="45dp"-->
<!--                    android:text="Tambah"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:textSize="12sp"-->
<!--                    app:iconSize="18sp" />-->

<!--            </LinearLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/til_sifat_surat"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp"-->
<!--                app:hintAnimationEnabled="false"-->
<!--                app:hintEnabled="false"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/ll_sifat_surat">-->

<!--                <AutoCompleteTextView-->
<!--                    android:id="@+id/option_sifat_surat"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:ellipsize="end"-->
<!--                    android:hint="Pilih sifat"-->
<!--                    android:inputType="none"-->
<!--                    android:maxLines="1" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <TextView
                android:id="@+id/tv_perihal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/perihal"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_kategori" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_perihal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_perihal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_perihal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="Isi singkat perihal"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:maxLength="255"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_file_surat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_perihal">

                <TextView
                    android:id="@+id/tv_file_surat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_surat"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_pilih_file"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="Pilih File"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_file_surat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_file_surat" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan_surat_masuk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="Simpan"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>